# python-progressbar

./: .coveragerc  .pre-commit-config.yaml  .travis.yml  CHANGES  CHANGES.rst  CONTRIBUTING.rst  ChangeLog.yaml  ISSUE_TEMPLATE  LICENSE  MANIFEST.in  Makefile  README  README.rst  README.txt  appveyor.yml  circle.yml  examples.py  progressbar.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  requirements_test.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  stale.yml
.github/workflows/: codeql.yml  main.yml  stale.yml
docs/: Makefile  conf.py  examples.rst  history.rst  index.rst  installation.rst  make.bat  progressbar.algorithms.rst  progressbar.bar.rst  progressbar.base.rst  progressbar.env.rst  progressbar.metadata.rst  progressbar.multi.rst  progressbar.rst  progressbar.shortcuts.rst  progressbar.six.rst  progressbar.terminal.base.rst  progressbar.terminal.colors.rst  progressbar.terminal.os_specific.posix.rst  progressbar.terminal.os_specific.rst  progressbar.terminal.os_specific.windows.rst  progressbar.terminal.rst  progressbar.terminal.stream.rst  progressbar.utils.rst  progressbar.widgets.rst  requirements.txt  usage.rst
docs/_theme/: LICENSE  flask_theme_support.py
progressbar/: ChangeLog.yaml  LICENSE  __about__.py  __init__.py  __main__.py  _compat.py  _six.py  algorithms.py  ansi.py  bar.py  base.py  compat.py  env.py  examples.py  metadata.py  multi.py  progressbar.py  setup.py  shortcuts.py  six.py  utils.py  widgets.py
progressbar/os_functions/: __init__.py
progressbar/terminal/: __init__.py  base.py  colors.py  stream.py
progressbar/terminal/os_specific/: __init__.py  posix.py  windows.py
tests/: conftest.py  custom_widgets.py  data.py  empty.py  failure.py  flush.py  iterators.py  misc.py  original_examples.py  requirements.txt  speed.py  terminal.py  test_algorithms.py  test_backwards_compatibility.py  test_color.py  test_custom_widgets.py  test_data.py  test_data_transfer_bar.py  test_dill_pickle.py  test_empty.py  test_end.py  test_failure.py  test_flush.py  test_iterators.py  test_job_status.py  test_large_values.py  test_misc.py  test_monitor_progress.py  test_multibar.py  test_progressbar.py  test_progressbar_command.py  test_samples.py  test_speed.py  test_stream.py  test_terminal.py  test_timed.py  test_timer.py  test_unicode.py  test_unknown_length.py  test_utils.py  (+9 more)
