[metadata]
description-file = README.rst

[nosetests]
verbosity=3
with-doctest=1
with-coverage=1
cover-package=progressbar
cover-min-percentage=100
detailed-errors=1
debug=nose.loader
pdb=1
pdb-failures=1


[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html

