[pytest]
norecursedirs = .svn _build tmp* docs build dist

[aliases]
test=pytest

[metadata]
description-file = README.rst

[nosetests]
verbosity=3
detailed-errors=1
debug=nose.loader

with-doctest=1

with-coverage=1
cover-package=progressbar
cover-branches=1
cover-min-percentage=100

#pdb=1
pdb-failures=1

with-tissue=1
tissue-ignore=W391
tissue-package=progressbar

[build_sphinx]
source-dir = docs/
build-dir  = docs/_build
all_files  = 1

[upload_sphinx]
upload-dir = docs/_build/html

[bdist_wheel]
universal=1
