[metadata]
description-file = README.rst

[bdist_wheel]
universal = 1

[upload]
sign = 1

[codespell]
skip = */htmlcov,./docs/_build,*.asc

ignore-words-list = datas

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .eggs
    .tox

extend-ignore =
    W391,
    E203,

[black]
line-length = 79
skip-string-normalization = true